docs/22.03.19/섬나라 아일랜드.md
# 2022.03.20 (일요일)
### **1. 섬나라 아일랜드(DFS)**

Q. N*N의 섬나라 아일랜드의 지도가 격자판의 정보로 주어집니다.   
   각 섬은 1로 표시되어 상하좌 우와 대각선으로 연결되어 있으며, 0은 바다입니다.   
   섬나라 아일랜드에 몇 개의 섬이 있는지 구하는 프로그램을 작성하세요.
   만약 아래와 같다면 섬의 개수는 5개입니다.   
   ![](https://user-images.githubusercontent.com/94853413/159105307-284f75c5-d0c3-4ee1-a2e4-eeba755f0c17.png)    
        

**<풀이 내용>**
```java
import java.util.*;
class Main {
	static int answer = 0, n;
	static int[] dx = {-1, -1, 0, 1, 1, 1, 0, -1};
	static int[] dy = {0, 1, 1, 1, 0, -1, -1, -1};
	
	public static void DFS(int x, int y, int[][] board){
		for (int i = 0; i < 8; i++){
			int nx = x+dx[i];
			int ny = y+dy[i];
			if (nx >= 0 && nx < n && ny >= 0 && ny < n && board[nx][ny] == 1){
				board[nx][ny] = 0;
				DFS(nx, ny, board);
			}
		}	
	}
	public static void solution(int[][] board){
		for(int i = 0; i < n; i++){
			for(int j = 0; j < n; j++){
				if (board[i][j] == 1){
					answer++;
					board[i][j] = 0;
					DFS(i, j, board);
				}
			}
		}	
	}

	public static void main(String[] args){
		Scanner sc = new Scanner(System.in);
		n = sc.nextInt();
		int[][] arr = new int[n][n];
		for(int i = 0; i < n; i++){
			for(int j = 0; j < n; j++){
				arr[i][j] = sc.nextInt();
			}
		}
		solution(arr);
		System.out.println(answer);
	}
}
```


##  **🔥 새로 배운 내용 정리 & 느낀 점**
    
    1. 상 하 좌 우 대각선까지 연결되어있으므로 총 8방향으로 연결되어 있다.