docs/22.03.23/섬나라 아일랜드.md
# 2022.03.23 (수요일)
### **1. 섬나라 아일랜드(BFS)**

Q. N*N의 섬나라 아일랜드의 지도가 격자판의 정보로 주어집니다.   
각 섬은 1로 표시되어 상하좌 우와 대각선으로 연결되어 있으며, 0은 바다입니다.   
섬나라 아일랜드에 몇 개의 섬이 있는지 구하는 프로그램을 작성하세요.
만약 아래와 같다면 섬의 개수는 5개입니다.   
![](https://user-images.githubusercontent.com/94853413/159105307-284f75c5-d0c3-4ee1-a2e4-eeba755f0c17.png)


**<풀이 내용>**
```java
import java.util.*;
class Point{
    int x, y;
    Point(int x, int y){
        this.x=x;
        this.y=y;
    }
}

class Main {
    static int answer = 0, n;
    static int[] dx = {-1, -1, 0, 1, 1, 1, 0, -1};
    static int[] dy = {0, 1, 1, 1, 0, -1, -1, -1};
    static Queue<Point> queue = new LinkedList<>();

    public static void BFS(int x, int y, int[][] board){
        queue.add(new Point(x, y));
        while (!queue.isEmpty()){
            Point pos = queue.poll();
            for (int i = 0; i < 8; i++){
                int nx = pos.x+dx[i];
                int ny = pos.y+dy[i];
                if (nx >= 0 && nx < n && ny >= 0 && ny < n && board[nx][ny] == 1){
                    board[nx][ny] = 0;
                    queue.add(new Point(nx, ny));
                }
            }
        }
    }

    public static void solution(int[][] board){
        for (int i = 0; i < n; i++){
            for (int j = 0; j < n; j++){
                if (board[i][j] == 1){
                    answer++;
                    board[i][j] = 0;
                    BFS(i, j, board);
                }
            }
        }
    }

    public static void main(String[] args){
        Scanner sc = new Scanner(System.in);
        n = sc.nextInt();
        int[][] arr = new int[n][n];
        for (int i = 0; i < n; i++){
            for (int j = 0; j < n; j++){
                arr[i][j] = sc.nextInt();
            }
        }
        solution(arr);
        System.out.println(answer);
    }
}
```


##  **🔥 새로 배운 내용 정리 & 느낀 점**

    